--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "expo": "~43.0.0",
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
