--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "help-projext",
+    "name": "Helpme!",
     "slug": "help-projext",
     "version": "1.0.0",
     "orientation": "portrait",
