--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.0",
+    "expo-application": "~4.0.0",
+    "expo-constants": "~12.1.3",
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
-    "firebase": "^9.3.0",
+    "firebase": "^9.4.0",
+    "picker": "^0.1.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
